--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,6 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/prop-types": 0,
-    "no-case-declarations": 0
+    "react/prop-types": 0
   }
 }
