--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
+    "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
