--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "webpack serve --mode development --hot",
+    "dev": "webpack serve --mode development --hot --port 3000",
     "build": "webpack --mode production"
   },
   "dependencies": {
