--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
