--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "argon2": "^0.27.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "mongoose": "^5.11.8",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "socket.io": "^3.0.4"
   }
