--- a/web/.babelrc
+++ b/web/.babelrc
@@ -1,4 +1,12 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [["babel-plugin-styled-components", { "pure": true }]]
+  "plugins": [
+    ["babel-plugin-styled-components", { "pure": true }],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
+  ]
 }
