--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "argon2": "^0.27.1",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.2.0",
+    "ioredis": "^4.19.4",
     "mongoose": "^5.11.8",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
