--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   }
 }
